# Changelog-API

./: .ruff.toml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  config.ini.example  demo.py  pyproject.toml
requirements/: dev.in  dev.txt  prod.in  prod.txt
src/e1004/changelog_api/: app.py  blueprint.py  db.py  error.py  model.py  repository.py  service.py  ui.py
src/e1004/changelog_api/assets/: script.js
src/e1004/changelog_api/assets/css/: styles.css
src/e1004/changelog_api/templates/: 404.html  changes.html  index.html
test/: test_controller_create.py  test_controller_delete.py  test_controller_protection.py  test_controller_read.py  test_controller_update.py  test_repository_create.py  test_repository_delete.py  test_repository_read.py  test_repository_update.py  test_service.py  test_service_validate_number.py
